# clients

./: .browserslistrc  .eslintignore  .eslintrc.json  .gitignore  .npmrc  111.0ef75c614d5cdd9a3549.js  111.0ef75c614d5cdd9a3549.js.map  111.facbcbc7e5b234b41e70.js.map  111.fd2bd33e5e2c9c3a5518.js  111.fd2bd33e5e2c9c3a5518.js.map  125.8432c8d0f7a38fa653dc.js.map  125.a9247f6a970956e8d672.js  125.a9247f6a970956e8d672.js.map  126.0487ac3e330334ed2ef4.js  126.0487ac3e330334ed2ef4.js.map  126.1f5a52e3763c994f6754.js  126.1f5a52e3763c994f6754.js.map  126.2bf196618688a1878472.js  126.2bf196618688a1878472.js.map  126.490bc9f798062d6268af.js  126.490bc9f798062d6268af.js.map  126.67468e044f2dc4a8c611.js  126.67468e044f2dc4a8c611.js.map  126.717151664162289f763e.js  126.717151664162289f763e.js.map  126.779c84a1d15e32fb8211.js  126.779c84a1d15e32fb8211.js.map  126.885c4b43e5da0c51d3e0.js  126.885c4b43e5da0c51d3e0.js.map  126.ace31b2d9c263f9b95fc.js  126.ace31b2d9c263f9b95fc.js.map  126.cc4aad4372d48044648f.js  126.cc4aad4372d48044648f.js.map  126.e07efdb41070ef735e26.js  126.e07efdb41070ef735e26.js.map  126.e32db9d03256d65cb539.js  126.e32db9d03256d65cb539.js.map  126.e80e852eaa7a134e049a.js  126.e80e852eaa7a134e049a.js.map  131.7fdb2bd22b8c842ca048.js  (+344 more)
.github/: CODEOWNERS  renovate.json  whitelist-capital-letters.txt
.storybook/: main.ts  preview.tsx
app/: main.0768d895861eaac7e612.js  main.0a3db38feba212837352.js  main.0c80ca678bc06752870a.js  main.0d72b77046f230dac41c.css  main.0d72b77046f230dac41c.css.map  main.0ed720ec760717ce2d8f.js  main.11e3fb20d0a382a02bdc.js  main.176b11fdc3de734cef61.js  main.181c706f0564fd9bb6b7.js  main.1b5a4827f9cc1d4b94b1.js  main.1e8492822c2871f6f11b.js  main.1f91c9137ad8fe6f78e2.css  main.1f91c9137ad8fe6f78e2.css.map  main.234048dfba6f9e039b12.js  main.24a0c0b27b6f0a78ba1b.js  main.25130fb47e8febf6b006.js  main.25ccd7086591b5f4c33e.js  main.2726922a3a9529e8df17.css  main.2726922a3a9529e8df17.css.map  main.286a414b848cd586cde6.js  (+111 more)
apps/desktop/desktop_native/core/: Cargo.toml
apps/desktop/desktop_native/core/src/: clipboard.rs  lib.rs
apps/desktop/desktop_native/core/src/autofill/: macos.rs
apps/desktop/desktop_native/core/src/biometric/: macos.rs  mod.rs  unix.rs  windows.rs
apps/desktop/desktop_native/core/src/fido2/: mod.rs  unix.rs
apps/desktop/desktop_native/core/src/ipc/: client.rs  mod.rs  server.rs
apps/desktop/desktop_native/core/src/password/: unix.rs
apps/desktop/desktop_native/napi/: Cargo.toml  index.d.ts  index.js  package.json
apps/desktop/desktop_native/napi/src/: lib.rs
apps/desktop/native/crates/swift/: ..swiftdoc  ..swiftsourceinfo  Cargo.toml  build.rs  build.sh  ipc.swiftmodule  uniffi.toml
apps/desktop/native/crates/swift/Ipc/: Package.swift
apps/desktop/native/crates/swift/Ipc/.swiftpm/xcode/xcuserdata/oscar.xcuserdatad/xcschemes/: xcschememanagement.plist
apps/desktop/native/crates/swift/Ipc/Sources/Ipc/: Ipc.swift
apps/desktop/native/crates/swift/Ipc/Sources/IpcFFI.xcframework/: Info.plist
apps/desktop/native/crates/swift/IpcFFI.framework/Headers/: ipcFFI.h
apps/desktop/native/crates/swift/src/: ipc.udl  ipc.uniffi.rs  lib.rs
(+2764 files in other folders)
