[package]
edition = "2021"
license = "GPL-3.0"
name = "desktop_core"
version = "0.0.0"
publish = false

[features]
default = []
manual_test = []

[dependencies]
aes = "=0.8.4"
anyhow = "=1.0.86"
arboard = { version = "=3.4.0", default-features = false, features = [
    "wayland-data-control",
] }
async-stream = "0.3.5"
base64 = "=0.22.1"
byteorder = "1.5.0"
cbc = { version = "=0.1.2", features = ["alloc"] }
futures = "0.3.30"
homedir = "0.3.3"
libc = "=0.2.155"
pin-project = "1.1.5"
rand = "=0.8.5"
retry = "=2.0.0"
russh-cryptovec = "0.7.3"
scopeguard = "=1.2.0"
sha2 = "=0.10.8"
ssh-encoding = "0.2.0"
ssh-key = { version = "0.6.6", default-features = false, features = [
    "encryption",
    "ed25519",
    "rsa",
    "getrandom",
] }
bitwarden-russh = { git = "https://github.com/bitwarden/bitwarden-russh.git", branch = "km/pm-10098/clean-russh-implementation" }
thiserror = "=1.0.63"
tokio = { version = "1.38.0", features = ["io-util", "sync", "macros", "net"] }
tokio-stream = { version = "0.1.15", features = ["net"] }
tokio-util = "0.7.11"
typenum = "=1.17.0"
rand_chacha = "0.3.1"
pkcs8 = { version = "0.10.2", features = ["alloc", "encryption", "pem"] }
rsa = "0.9.6"
ed25519 = { version = "2.2.3", features = ["pkcs8"] }

[target.'cfg(windows)'.dependencies]
widestring = "=1.1.0"
windows = { version = "=0.57.0", features = [
    "Foundation",
    "Security_Credentials_UI",
    "Security_Cryptography",
    "Storage_Streams",
    "Win32_Foundation",
    "Win32_Security_Credentials",
    "Win32_System_WinRT",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(windows)'.dev-dependencies]
keytar = "=0.1.6"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "=0.9.4"
security-framework = "=2.11.0"
security-framework-sys = "=2.11.0"

[target.'cfg(target_os = "linux")'.dependencies]
gio = "=0.19.5"
libsecret = "=0.5.0"
zbus = "=4.3.1"
zbus_polkit = "=4.0.0"
