[package]
edition = "2021"
license = "GPL-3.0"
name = "desktop_swift"
version = "0.0.0"

[lib]
crate-type = ["staticlib", "cdylib"]
name = "desktop_swift"

[dependencies]
desktop_core = { path = "../core" }
anyhow = "1.0"
dirs = "4.0.0"
env_logger = "0.10.0"
log = "0.4.17"
parity-tokio-ipc = "0.9.0"
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = ["full"] }
uniffi = "0.22"
uniffi_macros = "0.22"

[build-dependencies]
uniffi_build = { version = "0.22", features = ["builtin-bindgen"] }
